<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".gui.login.Login">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="190dp"
        android:layout_height="85dp"
        android:layout_marginTop="50dp"
        android:scaleType="fitXY"
        android:src="@drawable/newlogo" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <EditText
            android:id="@+id/emailEt"
            android:layout_width="276dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:background="@drawable/edit_textstyle"
            android:hint="@string/userName"
            android:inputType="textEmailAddress"
            android:padding="8dp"
            android:paddingRight="5dp"
            android:textSize="15dp" />

        <EditText
            android:id="@+id/passEt"
            android:layout_width="278dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:background="@drawable/edit_textstyle"
            android:fontFamily="@font/flat"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:padding="8dp"
            android:paddingRight="5dp"
            android:textSize="15dp"
            android:imeOptions="actionDone"
            android:gravity="end"

            />
        <TextView
            android:id="@+id/forgetPass"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:fontFamily="@font/flat"
            android:text="@string/passText"
            android:textSize="12sp"
            android:layout_marginRight="120dp"/>
        <Button
            android:id="@+id/lognBtn"
            android:layout_width="173dp"
            android:layout_height="41dp"
            android:layout_marginBottom="8dp"
            android:layout_marginTop="8dp"
            android:background="@drawable/logn_stylebtn"
            android:fontFamily="@font/flat"
            android:text="@string/تسجيل_الدخول"
            android:textColor="@color/whitePrimer"/>
    </LinearLayout>

</LinearLayout>