<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:segmentedgroup="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    android:orientation="vertical"
    tools:context=".gui.mainpage.HomeFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <info.hoang8f.android.segmented.SegmentedGroup
            android:id="@+id/rg_reset_options"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="horizontal"
            android:weightSum="2"
            segmentedgroup:sc_border_width="1dp"
            segmentedgroup:sc_checked_text_color="@color/darkwhite"
            segmentedgroup:sc_corner_radius="10dp"
            segmentedgroup:sc_tint_color="@color/colorAccent">

            <RadioButton
                android:id="@+id/companyRadio"
                style="@style/RadioButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:checked="true"
                android:padding="5dp"
                android:text="@string/companyRadio"
                android:fontFamily="@font/flat"/>

            <RadioButton
                android:id="@+id/ProductRadio"
                style="@style/RadioButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:padding="5dp"
                android:text="@string/productRadio"
                android:fontFamily="@font/flat"/>

        </info.hoang8f.android.segmented.SegmentedGroup>
        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="2"
            android:layout_marginLeft="8dp"
            android:id="@+id/contnerProductandCompany">

        </FrameLayout>
        <Button
            android:id="@+id/barcodeBtn"
            android:layout_width="200dp"
            android:layout_height="40dp"
            android:background="@drawable/logn_stylebtn"
            android:drawableRight="@drawable/barcode"
            android:fontFamily="@font/flat"
            android:padding="10dp"
            android:text="@string/orderbarcode"
            android:textColor="@color/darkwhite"
            android:layout_margin="7dp" />
    </LinearLayout>


</FrameLayout>